tests/baselines/reference/parserEnum1.errors.txt
tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum1.ts(3,17): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum1.ts (1 errors) ====
    
    
        export enum SignatureFlags {
                    ~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
            None = 0,
            IsIndexer = 1,
            IsStringIndexer = 1 << 1,
            IsNumberIndexer = 1 << 2,
        }